# electrochemistry-data

./: .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  ChangeLog  LICENSE-CC-BY-4.0  LICENSE-ODC-By-1.0  README.md  claude.md  config.toml  cuesta_2000_adsorption_5684_p2_f1a.yaml  cuesta_adsorption_5684_p2_f1b.bib  cuesta_adsorption_5684_p2_f1b.yaml  environment.yml  pyproject.toml  rever.xsh  setup.py  sha_tag_digest_missing_svg_tags.csv  sha_tag_digest_missing_svg_tags.md  svg_tags_full_digest.csv  svg_tags_full_digest.md  zenodo-description.md  zenodo.json
.claude/: settings.json
.claude/skills/review-literature-pr/: SKILL.md
.claude/skills/review-source-data-pr/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/prompts/: review-literature-pr.prompt.md  review-source-data-pr.prompt.md
.github/workflows/: build.yml  check-metadata-schema.yml  quick-data-check.yml  test.yml  validation.yml
data/: Makefile
doc/news/: TEMPLATE copy.rst  abe_2019_electro-oxidation_315.rst  add-kibler-2003-preparation.rst  add-pajkossy-2007-voltammetry-113.rst  add-schema-version.rst  add-wan-1999-situ-6978.rst  ando_1997_situ_277.rst  anjos_2010_underpotential_8.rst  arulmozhi_2018_design_113.rst  atkin_2011_an_6849.rst  atkin_2014_structure_44.rst  atking_2009_afm_13266.rst  automatic-metadata-version-check.rst  beden_1985_voltammetric_822.rst  berger_2017_lithium_261_f1.rst  bi_2018_minmizing_9-5222.rst  bib-creation-0.7.0.rst  bibliographie-file.rst  bibliography-syntax.rst  bibtex-journal-syntax.rst  blizanac_2003_anion_625.rst  bonhote_1996_hydrophobic_1168.rst  borisenki_2006_in_6250.rst  borisenko_2012_an_1736.rst  briega_martos_2020_hydrogen_135452.rst  broekmann_1999_in-situ_307.rst  chen_1999_iodide_342.rst  chen_2024_deconvolution_4958.rst  ci-full-check-non-data.rst  clavilier_1980_the_211.rst  conversion-performance.rst  cuesta_2000_the_5684.rst  droog_1980_oxygen_387.rst  endres_20006_probing_1377.rst  engstfeld2018_retracing.rst  entry-fixes.rst  feng_2017_new_1003.rst  fix-identifiers.rst  fixed-sha-tags.rst  foelske_2004_initial_10.rst  (+58 more)
echemdb_ecdata/: bibliography.py  digitize.py  entrypoint.py  review.py  url.py  validate.py
echemdb_ecdata/test/: cli.py
echemdb_ecdata/zenodo/: zenodo.py
literature/: LICENSE.md
literature/bibliography/: bibliography.bib
literature/rawdata/engstfeld_2018_polycrystalline_17743/: 1708030001Cu100_UHV_C01_cycle30.csv  1708030001Cu100_UHV_C01_cycle31.csv  1708030001Cu100_UHV_C01_cycle32.csv  1708030001Cu100_UHV_C01_cycle33.csv  1708030001Cu100_UHV_C01_cycle34.csv  1708030001Cu100_UHV_C01_cycle35.csv  1708030001Cu100_UHV_C01_cycle36.csv  engstfeld_2018_polycrystalline_17743_f4b_1.yaml  engstfeld_2018_polycrystalline_17743_f4b_2.yaml  engstfeld_2018_polycrystalline_17743_f4b_3.csv  engstfeld_2018_polycrystalline_17743_f4b_3.yaml  engstfeld_2018_polycrystalline_17743_f4b_4.csv  engstfeld_2018_polycrystalline_17743_f4b_4.mpt  engstfeld_2018_polycrystalline_17743_f4b_4.yaml
literature/sato_2006_effect_725/: sato_2006_effect_725_p3_f4b_red.yaml  sato_2006_effect_725_p3_f4c_red.yaml  sato_2006_effect_725_p3_f4d_red.yaml
literature/source_data/engstfeld_2018_polycrystalline_17743/: engstfeld_2018_polycrystalline_17743_f4b_1.csv  engstfeld_2018_polycrystalline_17743_f4b_1.yaml  engstfeld_2018_polycrystalline_17743_f4b_2.csv  engstfeld_2018_polycrystalline_17743_f4b_2.yaml  engstfeld_2018_polycrystalline_17743_f4b_3.yaml  engstfeld_2018_polycrystalline_17743_f4b_4.yaml  notes.txt
literature/source_data/hermann_2021_effect_138279/: hermann_2021_effect_138279_f5a_black.csv  hermann_2021_effect_138279_f5a_black.yaml  hermann_2021_effect_138279_f5a_blue.csv  hermann_2021_effect_138279_f5a_blue.yaml  hermann_2021_effect_138279_f5a_green.csv  hermann_2021_effect_138279_f5a_green.yaml  hermann_2021_effect_138279_f5a_orange.csv  hermann_2021_effect_138279_f5a_orange.yaml  hermann_2021_effect_138279_f5a_red.csv  hermann_2021_effect_138279_f5a_red.yaml  hermann_2021_effect_138279_f5a_violet.csv  hermann_2021_effect_138279_f5a_violet.yaml
literature/source_data/schoenig_2023_entropic_5948/: schoenig_2023_entropic_5948_f1_brown.csv  schoenig_2023_entropic_5948_f1_brown.yaml  schoenig_2023_entropic_5948_f1_green.csv  schoenig_2023_entropic_5948_f1_green.yaml  schoenig_2023_entropic_5948_f1_orange.csv  schoenig_2023_entropic_5948_f1_orange.yaml  schoenig_2023_entropic_5948_f1_purple.csv  schoenig_2023_entropic_5948_f1_purple.yaml
literature/source_data/schonig_2023_entropic_5948/: schonig_2023_entropic_5948_f1_brown.yaml  schonig_2023_entropic_5948_f1_green.yaml  schonig_2023_entropic_5948_f1_orange.csv  schonig_2023_entropic_5948_f1_orange.yaml  schonig_2023_entropic_5948_f1_purple.yaml
literature/source_data/strmcnik_2010_enhanced_880/: strmcnik_2010_enhanced_880_f1tl_black.csv  strmcnik_2010_enhanced_880_f1tl_black.yaml  strmcnik_2010_enhanced_880_f2tl_black.csv  strmcnik_2010_enhanced_880_f2tl_black.yaml  strmcnik_2010_enhanced_880_f2tr_black.csv  strmcnik_2010_enhanced_880_f2tr_black.yaml
literature/svgdigitizer/abd_1998_electrochemical_1103/: abd_1998_electrochemical_1103_f1_solid.yaml
literature/svgdigitizer/abe_2019_electro-oxidation_315/: abe_2019_electro-oxidation_315.bib  abe_2019_electro-oxidation_315_f2a1_black.yaml  abe_2019_electro-oxidation_315_f2b1_black.csv  abe_2019_electro-oxidation_315_f2b1_black.yaml  abe_2019_electro-oxidation_315_f2c1_black.csv  abe_2019_electro-oxidation_315_f2c1_black.yaml  abe_2019_electro-oxidation_315_f3a1_black.yaml  abe_2019_electro-oxidation_315_f3b1_black.csv  abe_2019_electro-oxidation_315_f3b1_black.yaml  abe_2019_electro-oxidation_315_f4a1_black.yaml  abe_2019_electro-oxidation_315_f4b1_black.csv  abe_2019_electro-oxidation_315_f4b1_black.yaml
scripts/: sync_config.py
test/raw_data/: bibliography.yaml  empty_column.csv  empty_column.yaml
test/source_data/: bibliography.csv  bibliography.yaml  default.csv  default.yaml  empty_column.yaml  multi_header_lines.yaml
util/: pull.sh  push.sh  rename_identifiers.sh
(+635 files in other folders)
