[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "echemdb-ecdata"
version = "0.5.1"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "a database for published electrochemical data inferred from SVG and raw CSV files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5,<3",
    "svgdigitizer>=0.14.1,<0.15",
    "unitpackage>=0.12.0,<0.13"
]

[project.scripts]
echemdb_ecdata = "echemdb_ecdata.entrypoint:cli"

[tool.setuptools]
packages = [
    "echemdb_ecdata",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.environments]
python-310 = ["test", "python-310"]
python-311 = ["test", "python-311"]
python-312 = ["test", "python-312"]
python-313 = ["test", "python-313"]
python-314 = ["test", "python-314"]
dev = ["dev", "doc", "test", "lint"]
release = ["release"]

[tool.pixi.dependencies]
pixi-kernel = ">=0.7.1,<0.8"
ipykernel = ">=7.2.0,<8"
pip = ">=26.0.1,<27"
jupyterlab = ">=4.5.4,<5"
jupytext = ">=1.19.1,<2"

[tool.pixi.pypi-dependencies]
echemdb_ecdata = { path = ".", editable = true }

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.python-314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
check-jsonschema = ">=0.36.2,<0.37"
pytest = ">=9.0.2,<10"
pytest-xdist = ">=3.8.0,<4"
pytest-doctestplus = ">=1.7.1,<2"
pytest-remotedata = ">=0.4.1,<0.5"

[tool.pixi.feature.test.tasks]
copy-bib = "mkdir -p data/generated/bibliography && cp literature/bibliography/bibliography.bib data/generated/bibliography/bibliography.bib"
convert-svg = "cd data && make -j$(nproc)"
convert-raw = "cd data && make source_data -j$(nproc)"
convert = { depends-on = ["copy-bib", "convert-raw", "convert-svg"] }
clean-data = "cd data && make clean"
# To validate the metadata against a specific version preceded the version by `tags` such as `tags/0.3.1`.
# To validate the metadata against metadata in a specific branch use `head/branch-name`.
validate-svgdigitizer = { args = [ { "arg" = "version", "default" = "tags/0.5.1" } ],cmd = "bash -c \"find ./data/generated/svgdigitizer/ -type f -name '*.json' -print0 | xargs -0 check-jsonschema --verbose --schemafile https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/echemdb_package.json --base-uri https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/echemdb_package.json --no-cache\"" }
validate-raw = { args = [ { "arg" = "version", "default" = "tags/0.5.1" } ],cmd = "bash -c \"find ./data/generated/source_data/ -type f -name '*.json' -print0 | xargs -0 check-jsonschema --verbose --schemafile https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/echemdb_package.json --base-uri https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/echemdb_package.json --no-cache\"" }
validate-svgdigitizer-yaml = { args = [ { "arg" = "version", "default" = "tags/0.5.1" } ], cmd = "bash -c \"find ./literature/svgdigitizer/ -type f -name '*.yaml' -print0 | xargs -0 check-jsonschema --verbose --schemafile https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/svgdigitizer.json --base-uri https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/svgdigitizer.json --no-cache\"" }
validate-source-yaml = { args = [ { "arg" = "version", "default" = "tags/0.5.1" } ], cmd = "bash -c \"find ./literature/source_data/ -type f -name '*.yaml' -print0 | xargs -0 check-jsonschema --verbose --schemafile https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/source_data.json --base-uri https://raw.githubusercontent.com/echemdb/metadata-schema/refs/{{ version }}/schemas/source_data.json --no-cache\"" }
validate-input = { depends-on = ["validate-svgdigitizer-yaml", "validate-source-yaml"] }
validate-generated = { depends-on = ["validate-svgdigitizer", "validate-raw"] }
doctest = "pytest -n auto --doctest-modules echemdb_ecdata"
# pytest executes doctests of the cli
pytest = "pytest -n auto echemdb_ecdata/**/*.py"


[tool.pixi.feature.lint.dependencies]
black = ">=26.1.0,<27"
isort = ">=7.0.0,<8"
pylint = ">=4.0.4,<5"

[tool.pixi.feature.dev.tasks]
test = { depends-on = ["doctest", "pytest"] }

[tool.pixi.feature.lint.tasks]
pylint = "pylint echemdb_ecdata"
black = "black echemdb_ecdata"
isort = "isort --profile black echemdb_ecdata"
lint = { depends-on = ["pylint", "black", "isort"] }

[tool.pixi.feature.doc.dependencies]
jupytext = ">=1.19.1,<2"
linkchecker = ">=10.6.0,<11"
myst-parser = ">=5.0.0,<6"
myst-nb = ">=1.3.0,<2"
sphinx = ">=8.2.3,<9"
sphinx-design = ">=0.7.0,<0.8"
sphinx_rtd_theme = ">=3.1.0,<4"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"

[tool.pixi.feature.dev.dependencies]
make = ">=4.4.1,<5"
pybtex = ">=0.25.1,<0.26"
pip = ">=26.0.1,<27"
conda = ">=26.1.0,<27"
jupyterlab = ">=4.5.4,<5"

[tool.pixi.target.win-64.dependencies]
m2-bash = ">=5.2.37.2,<6"

[tool.pixi.feature.release.tasks]
# To create a new release, run `pixi run rever X.Y.Z`
rever = { args = [ { "arg" = "version", "default" = "--help" } ],cmd = "rever {{ version }}" }

[tool.pixi.feature.release.dependencies]
twine = ">=6.2.0,<7"
rever = ">=0.5.1,<0.6"
make = ">=4.4.1,<5"
setuptools = ">=80.10.2,<81"
python = "*"

[tool.pixi.feature.release.pypi-dependencies]
build = ">=1.4.0, <2"
